samples/_failures_safe/1761149895_65b304_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c17af580.c: In function ‘main’:
./samples/SAFE/__tmp_c17af580.c:139:9: error: expected declaration or statement at end of input
  139 |         fprintf(stderr, "Memory allocation failed\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_c17af580.c:139:9: error: expected declaration or statement at end of input
